--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -18,25 +21,25 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy build to 'deploy' branch
+      - name: Push build to deploy branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Save deploy branch temporarily
+          # Save build output temporarily
           mv build build-temp
 
-          # Orphan checkout to deploy
+          # Create clean orphan branch
           git checkout --orphan deploy
-
-          # Clear everything
           git reset --hard
           rm -rf *
 
-          # Move build files back
+          # Move build files back in
           mv build-temp/* .
 
           # Commit and push
           git add .
-          git commit -m "Deploy from GitHub Actions at $(date)"
-          git push origin deploy --force
+          git commit -m "🚀 Auto-deploy: $(date)"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:deploy --force
