--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -1,45 +1,30 @@
-name: Build and Push to Deploy Branch
+name: Deploy via SSH to ScalaHosting
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  contents: write
-
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies and build
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy to VPS
         run: |
-          npm install
-          npm run build
-
-      - name: Push build to deploy branch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Save build output temporarily
-          mv build build-temp
-
-          # Create clean orphan branch
-          git checkout --orphan deploy
-          git reset --hard
-          rm -rf *
-
-          # Move build files back in
-          mv build-temp/* .
-
-          # Commit and push
-          git add .
-          git commit -m "🚀 Auto-deploy: $(date)"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:deploy --force
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
+            cd ~/emsforge
+            git pull origin main
+            npm install
+            npm run build
+            rm -rf ~/public_html/*
+            cp -r build/* ~/public_html/
+          EOF
