--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,13 @@
-name: Build and Push to Deploy Branch
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Push build folder to deploy branch
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Save build folder
-          mv build build-temp
-
-          # Create new orphan branch
-          git checkout --orphan deploy
-
-          # Remove all files
-          git rm -rf .
-
-          # Restore build files
-          mv build-temp/* .
-
-          # Commit and push
-          git add .
-          git commit -m "Automated deploy: $(date)"
-          git push origin deploy --force
+- name: Push build folder to deploy branch
+  env:
+    DEPLOY_PAT: ${{ secrets.DEPLOY_PAT }}
+  run: |
+    git config --global user.name "github-actions[bot]"
+    git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    mv build build-temp
+    git checkout --orphan deploy
+    git rm -rf .
+    mv build-temp/* .
+    git add .
+    git commit -m "Automated deploy: $(date)"
+    git push https://x-access-token:${DEPLOY_PAT}@github.com/${{ github.repository }} deploy --force
