--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -1,14 +1,13 @@
-- name: Push changes
-  run: git push origin HEAD:deploy
+- name: Push build folder to deploy branch
   env:
-    GIT_AUTHOR_NAME: github-actions
-    GIT_AUTHOR_EMAIL: github-actions@github.com
-    GIT_COMMITTER_NAME: github-actions
-    GIT_COMMITTER_EMAIL: github-actions@github.com
-    # Use your secret name here
-    GH_TOKEN: ${{ secrets.GH_TOKEN }}
-  # Use the token for authentication
-  # Example for setting up remote with token
+    DEPLOY_PAT: ${{ secrets.DEPLOY_PAT }}
   run: |
-    git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/flame05154/EMSForge.git
-    git push origin HEAD:deploy
+    git config --global user.name "github-actions[bot]"
+    git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    mv build build-temp
+    git checkout --orphan deploy
+    git rm -rf .
+    mv build-temp/* .
+    git add .
+    git commit -m "Automated deploy: $(date)"
+    git push https://x-access-token:${DEPLOY_PAT}@github.com/${{ github.repository }} deploy --force
